fix some preprocessor coloring issue update readme

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -31,7 +31,8 @@
                 }
             },
             "command": "npx vsce package",
-            "problemMatcher": []
+            "problemMatcher": [],
+            "dependsOn": [ "build-syntax" ]
         }
     ]
 }
